@@ -1,10 +1,8 @@
 package mx.edu.utez.warehouse.user.service;
 import jakarta.persistence.NoResultException;
 import mx.edu.utez.warehouse.message.model.MessageModel;
-import mx.edu.utez.warehouse.role.model.AuthorityName;
 import mx.edu.utez.warehouse.role.model.RoleModel;
 import mx.edu.utez.warehouse.role.service.RoleRepository;
-import mx.edu.utez.warehouse.role.service.RoleService;
 import mx.edu.utez.warehouse.user.model.UserModel;
 import mx.edu.utez.warehouse.utils.MessageCatalog;
 import org.apache.logging.log4j.LogManager;
@@ -12,16 +10,13 @@ import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 
-import javax.management.relation.Role;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -105,7 +100,7 @@ public class UserServiceImpl implements UserService {
         try {
             userModel.setStatus(1);
             Set<RoleModel> roles = userModel.getAuthorities();
-            roles.addAll(roleRepository.findByIdIn(userModel.getAuthorities().stream().map(RoleModel::getId).collect(Collectors.toList())));
+            roles.addAll(roleRepository.findByIdIn(userModel.getAuthorities().stream().map(RoleModel::getId).toList()));
             userModel.setAuthorities(roles);
             userModel.setPassword(userModel.getUsername());
             String encodedPassword = passwordEncoder.encode(userModel.getPassword());
